--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
  <title>Checklist App</title>
  <link rel="stylesheet" href="style.css">
  <link rel="manifest" href="manifest.json">
+ <script async src="https://www.googletagmanager.com/gtag/js?id=G-5E2VE88YM4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5E2VE88YM4');
+</script>
 </head>
 <body>
  <h1>My To-Do List</h1>
