--- a/index.html
+++ b/index.html
@@ -23,15 +23,6 @@
  <button id="addTaskBtn">Add Task</button>
  <ul id="taskList"></ul>
  </div>
- <script src="app.js"></script>
- <script>
- if ('serviceWorker' in navigator) {
- navigator.serviceWorker.register('service-worker.js', {
- scope: '/to-do-list/'
- })
- .then(reg => console.log('Service Worker Registered'))
- .catch(err => console.error('Service Worker Error:', err));
- }
-</script>
+ <script type="module"src="app.js"></script>
 </body>
 </html>
